# MyBuilder

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
data/: generate_dataset.ts
src/: config.py  encoding.py  inference.py  main.py  schemas.py
src/builders/: __init__.py  deterministic.py
tests/: test_api.py  test_builders.py  test_encoding.py
training/: train.py  train_config.yaml
