[project]
name = "minehelper-ai"
version = "0.1.0"
description = "LLM-powered Minecraft build generator API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "transformers>=4.46.0",
    "torch>=2.1.0",
    "peft>=0.14.0",
    "bitsandbytes>=0.45.0",
    "accelerate>=1.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
train = [
    "unsloth",
    "datasets>=3.2.0",
    "trl>=0.13.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
